:icons: font

= Gentics Mesh Changelog

[[vNextMajorRelease]]
== Next Major Release

CAUTION: The ElasticSearch server will no longer be embedded. Instead an external ElasticSearch 6.0 server can be used.

icon:plus[] Core: The OrientDB graph database will be updated to version 3.0

[[v0.13.3]] (12.01.2018)
== 0.13.3

icon:check[] Core: Fixed some bugs which left file handles open and thus clogged the system. This could lead a lockup of the system in some cases.

[[v0.13.2]]
== 0.13.2 (11.01.2018)

icon:plus[] Java Rest Client: It is now possible to retrieve the client version via `MeshRestClient.getPlainVersion()`.

icon:check[] Core: The consistency checks have been enhanced.

icon:check[] Core: Fixed some bugs which left file handles open and thus clogged the system. This could lead a lockup of the system in some cases.

[[v0.13.1]]
== 0.13.1 (05.01.2018)

icon:check[] Core: A Vert.x bug has been patched which caused HTTP requests to fail which had the "Connection: close" header set.

icon:check[] REST: A concurrency issue has been addressed which only happens when deleting and creating projects in fast succession.

icon:check[] Core: A potential concurrency issue has been fixed when handling request parameters.

[[v0.13.0]]
== 0.13.0 (02.01.2018)

CAUTION: The Java REST client was updated to use RxJava 2.

icon:plus[] Core: The internal RxJava code has been migrated to version 2.

[[v0.12.0]]
== 0.12.0 (21.12.2017)

CAUTION: The `search.httpEnabled` option within the `mesh.yml` has been removed. The embedded elasticsearch API can no longer be directly accessed via HTTP. The existing endpoint `/api/v1/:projectName/search` is unaffected by this change.

icon:plus[] Core: The core Vert.x library was updated to version 3.5.0

icon:plus[] Core: The internal server routing system has been overhauled.

== 0.11.8 (18.12.2017)

icon:check[] Image: Fixed a bug which left file handles open and thus clogged the system. This could lead a lockup of the system in some cases.
